--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
 	<link rel='stylesheet' href='style.css'>
     </head>
     <body>
-	<canvas id='game' width=700 height=450></canvas>
+	<canvas id='game' width='700px' height='450px'></canvas>
+	<p>Press <SPACE> to start!</p>
 	<script src='index.js'></script>
     </body>
 </html>
