--- a/index.html
+++ b/index.html
@@ -3,11 +3,14 @@
     <head>
 	<meta charset='UTF-8'>
 	<title>Pong</title>
+	<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 	<link rel='stylesheet' href='style.css'>
     </head>
     <body>
+	<h2>Pong!</h2>
 	<canvas id='game' width='700px' height='450px'></canvas>
-	<p>Press <SPACE> to start!</p>
+	<p>Press SPACE to start!</p>
+	<p>Your mouse controls the left paddle.</p>
 	<script src='index.js'></script>
     </body>
 </html>
